Fix: frankfurter base url.

--- a/sukrosono/src/main/resources/application.yaml
+++ b/sukrosono/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ spring:
 
 
 frankfurter:
-  baseUrl: https://api.frankfurter.dev/v1/
+  baseUrl: https://api.frankfurter.app/
   base-currency: IDR
   target-currency: USD
   timeout: 60
